--- a/views/email.jade
+++ b/views/email.jade
@@ -4,16 +4,12 @@ html
     meta(http-equiv = 'Content-Type', content = 'text/html; charset=UTF-8')
     title= subject
     body
-      h1.h1 Lorem ipsum
-      p
-        strong Lorem ipsum dolor:
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        br
-        |Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      h2.h2 Lorem ipsum
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      p Lorem ipsum:
-      ol
-        li Lorem ipsum dolor
-        li Lorem ipsum dolor
-        li Lorem ipsum dolor
+      h1 McTecnia
+      p Este email fue enviado por la pagina web de McTecnia en la seccion contactenos
+      p <strong>#{name}</strong> nos escribio desde la pagina web:
+      p #{text}
+      br
+      p Su email es:
+        a(href="mailto:#{email}") #{email}
+      p Su telefono es:
+        a(href="tel:#{phone}") #{phone}
