--- a/less/agency.less
+++ b/less/agency.less
@@ -161,7 +161,10 @@ h1, h2, h3, h4, h5, h6 {
         background-color: @gray-darker;
         padding: 10px 0;
         .navbar-brand {
-            font-size: 1.5em;
+          font-size: 1.5em;
+          .logo-mctecnia{
+            width: 30px;
+          }
         }
     }
 }
@@ -742,4 +745,9 @@ body {
 
 .text-white{
   color: white;
+}
+
+.logo-mctecnia {
+  width: 40px;
+  display: inline-block !important;
 }
