--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -224,6 +224,9 @@ fieldset[disabled] .btn-xl.active {
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
   }
+  .navbar-custom.affix .navbar-brand .logo-mctecnia {
+    width: 30px;
+  }
 }
 header {
   background-image: url('../img/hero-mctecnia.jpg');
@@ -749,4 +752,8 @@ body {
 }
 .text-white {
   color: white;
+}
+.logo-mctecnia {
+  width: 40px;
+  display: inline-block !important;
 }
